modified:   DataDownloader.ipynb

--- a/DataDownloader.ipynb
+++ b/DataDownloader.ipynb
@@ -111,9 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "id": "8a843c4b-540d-4c2f-8f1e-4ac1c47b3cf1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -129,63 +131,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "8b7af8c1-db81-435a-bb3c-4c791e3bd53d",
+   "execution_count": 97,
+   "id": "dad69e6d-521d-488f-b711-ceb1eb05cf13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "volbaUrl = urlRoot + volbyUrls[0][1] + \"/\" + volbyUrls[0][2]"
+    "def zpracujOdata(url):\n",
+    "    odkazy = []\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    for i in soup.find_all(\"li\"):\n",
+    "        for a in i.find_all(\"a\"):\n",
+    "            odkaz = a.attrs[\"href\"]\n",
+    "            if \"http\" not in odkaz:\n",
+    "                if \"_opendata.htm\" in odkaz:\n",
+    "                    odkaz = odkaz.replace(\"..\",\"/opendata\")\n",
+    "                    odkaz = \"https://volby.cz\" + odkaz\n",
+    "                    odkazy.append(odkaz)       \n",
+    "    return(odkazy)\n",
+    "\n",
+    "volbaOpendataHome = []\n",
+    "\n",
+    "for i in volbyUrls:\n",
+    "    volbaUrl = urlRoot + i[1] + \"/\" + i[2]\n",
+    "    time.sleep(0.3)\n",
+    "    if \"odata\" in volbaUrl or \"_seznam\" in volbaUrl:\n",
+    "        odkazy = zpracujOdata(volbaUrl)\n",
+    "        for odkaz in odkazy:\n",
+    "            volbaOpendataHome.append(odkaz)\n",
+    "    else:\n",
+    "        volbaOpendataHome.append(volbaUrl)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "dad69e6d-521d-488f-b711-ceb1eb05cf13",
+   "execution_count": 98,
+   "id": "9705e701-c758-4aae-8c80-b332ed89c385",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://volby.cz/opendata/prez2013/prez2013_opendata.htm\n",
-      "https://volby.cz/opendata/prez2018/prez2018_opendata.htm\n",
-      "https://volby.cz/opendata/ps2006/ps2006_opendata.htm\n",
-      "https://volby.cz/opendata/ps2010/ps2010_opendata.htm\n",
-      "https://volby.cz/opendata/ps2013/ps2013_opendata.htm\n",
-      "https://volby.cz/opendata/ps2017/ps2017odata.htm\n",
-      "https://volby.cz/opendata/ps2021/ps2021_opendata.htm\n",
-      "https://volby.cz/opendata/se2008/se2008_opendata.htm\n",
-      "https://volby.cz/opendata/se2010/se2010_opendata.htm\n",
-      "https://volby.cz/opendata/se2011/se2011_opendata.htm\n",
-      "https://volby.cz/opendata/se2012/se2012_opendata.htm\n",
-      "https://volby.cz/opendata/se2014/opendata_senat2014_seznam.htm\n",
-      "https://volby.cz/opendata/se2016/se2016_opendata.htm\n",
-      "https://volby.cz/opendata/se2017/se2017_opendata.htm\n",
-      "https://volby.cz/opendata/se2018/opendata_senat2018_seznam.htm\n",
-      "https://volby.cz/opendata/se2019duben/se2019duben_opendata.htm\n",
-      "https://volby.cz/opendata/se2020/opendata_senat2020_seznam.htm\n",
-      "https://volby.cz/opendata/se2022/se2022_opendata.htm\n",
-      "https://volby.cz/opendata/kz2008/kz2008_opendata.htm\n",
-      "https://volby.cz/opendata/kz2012/kz2012_opendata.htm\n",
-      "https://volby.cz/opendata/kz2016/kz2016_opendata.htm\n",
-      "https://volby.cz/opendata/kz2020/kz2020_opendata.htm\n",
-      "https://volby.cz/opendata/kv2006/kv2006_opendata.htm\n",
-      "https://volby.cz/opendata/kv2010/kv2010_opendata.htm\n",
-      "https://volby.cz/opendata/kv2014/kv2014_opendata.htm\n",
-      "https://volby.cz/opendata/kv2018/kv2018_opendata.htm\n",
-      "https://volby.cz/opendata/kv2022/kv2022_opendata.htm\n",
-      "https://volby.cz/opendata/ep2004/ep2004_opendata.htm\n",
-      "https://volby.cz/opendata/ep2009/ep2009_opendata.htm\n",
-      "https://volby.cz/opendata/ep2014/ep2014_opendata.htm\n",
-      "https://volby.cz/opendata/ep2019/ep2019_opendata.htm\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['https://volby.cz/opendata/se2022/se2022_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2020cerven/se2020cerven_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2020/se2020_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2019duben/se2019duben_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2018leden/se2018leden_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2018kveten/se2018kveten_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2018/se2018_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2017/se2017_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2016/se2016_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2014zari/se2014zari_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2014leden/se2014leden_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2014/se2014_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2012/se2012_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2011/se2011_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2010/se2010_opendata.htm',\n",
+       " 'https://volby.cz/opendata/se2008/se2008_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ps2021/ps2021_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ps2017nss/ps2017nss_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ps2017/ps2017_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ps2013/ps2013_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ps2010/ps2010_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ps2006/ps2006_opendata.htm',\n",
+       " 'https://volby.cz/opendata/prez2018/prez2018_opendata.htm',\n",
+       " 'https://volby.cz/opendata/prez2013/prez2013_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kz2020/kz2020_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kz2016/kz2016_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kz2012/kz2012_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kz2008/kz2008_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kv2022/kv2022_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kv2018/kv2018_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kv2014/kv2014_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kv2010/kv2010_opendata.htm',\n",
+       " 'https://volby.cz/opendata/kv2006/kv2006_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ep2019/ep2019_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ep2014/ep2014_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ep2009/ep2009_opendata.htm',\n",
+       " 'https://volby.cz/opendata/ep2004/ep2004_opendata.htm']"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in volbyUrls:\n",
-    "    volbaUrl = urlRoot + i[1] + \"/\" + i[2]\n",
-    "    print(volbaUrl)\n"
+    "sorted(volbaOpendataHome,reverse=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a4481ca-78b3-4c2d-b48d-d460f6ae5411",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8e3ae6e-28a4-40c6-b875-dc4954175e71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8afb4718-6b90-4674-9f03-aac1a5636822",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -275,7 +332,7 @@
     "        time.sleep(1)\n",
     "        print(\"davka\",i,response.status_code,\"\\r\")\n",
     "        if i<10:\n",
-    "            davkaurl=os.path.join(davkydir,\"davka_0\"+str(i)+\".xml\")                                \n",
+    "            davkaurl=os.path.join(davkydir,\"davka_0\"+str(i)+\".xml\")\n",
     "        else:\n",
     "            davkaurl=os.path.join(davkydir,\"davka_\"+str(i)+\".xml\")\n",
     "        with open(davkaurl,\"wb\") as file:\n",
