--- a/datadownloader.ipynb
+++ b/datadownloader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "32dfe155-1d41-4cb2-adcf-cb0d1b7d6abf",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3318f609-fbb3-4393-9763-2b0f973cd92d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sslverify = True  # nastavit na False u serveru, ktere hlasi chybu ssl\n",
+    "sslverify = False  # nastavit na False u serveru, ktere hlasi chybu ssl\n",
     "urlRoot = \"https://volby.cz/opendata/\"\n",
     "opendatafile = \"opendata.htm\"\n",
     "datadir = \"data\"\n",
@@ -34,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "64bc0807-7984-42fd-b3e9-39143a7cf140",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(opendataUrl)"
+    "response = requests.get(opendataUrl,verify=sslverify)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "366dface-af58-49f6-9a68-b247d3ba2c53",
    "metadata": {
     "tags": []
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "073e1d1b-563b-49d6-9319-ee6134d22f32",
    "metadata": {
     "tags": []
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dad69e6d-521d-488f-b711-ceb1eb05cf13",
    "metadata": {},
    "outputs": [],
    "source": [
     "def zpracujOdata(url):\n",
     "    odkazy = []\n",
-    "    response = requests.get(url)\n",
+    "    response = requests.get(url,verify=sslverify)\n",
     "    soup = BeautifulSoup(response.content, 'html.parser')\n",
     "    for i in soup.find_all(\"li\"):\n",
     "        for a in i.find_all(\"a\"):\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9460cecf-835c-4128-a452-8a3af7c7f9b3",
    "metadata": {},
    "outputs": [],
@@ -134,26 +134,26 @@
     "    responses = {}\n",
     "    for i in home:\n",
     "        volby = i.split(\"/\")[4]\n",
-    "        responses[volby] = requests.get(i)\n",
+    "        responses[volby] = requests.get(i,verify=sslverify)\n",
     "        time.sleep(sleeptime)\n",
     "    return (responses)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b084f837-02c8-43ce-ac83-5461f72be380",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "volbySoupsDict = getVolbySoup(volbaOpendataHome, 2)"
+    "volbySoupsDict = getVolbySoup(volbaOpendataHome, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ae8e497c-c195-49ed-a6dc-6ce6773c06fa",
    "metadata": {
     "tags": []
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "def getDavky(davkydir, url):\n",
-    "    posledni_davka = requests.get(url)\n",
+    "    posledni_davka = requests.get(url, verify=sslverify)\n",
     "    print(\"getDavky\", davkydir, url)\n",
     "    root = ET.fromstring(posledni_davka.text)\n",
     "    davka = root[0].attrib\n",
@@ -197,7 +197,6 @@
     "        for a in soup.find_all('a'):\n",
     "            odkaz = a['href']\n",
     "            if '.zip' in odkaz:\n",
-    "                continue  # docasne zablokovat download zip\n",
     "                fileUrl = urljoin(url, odkaz)\n",
     "                dataType = fileUrl.split('/')[4]\n",
     "                path = os.path.join(volba,dataType)\n",
@@ -245,9 +244,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "volby:Python",
+   "display_name": "Python 3.10.6 ('datascience')",
    "language": "python",
-   "name": "conda-env-volby-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -260,6 +259,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b60e12fa6fabd1d1cbe64ff8a6a144ab14f523a264d60b6f03d3edcbf05f4916"
+   }
   }
  },
  "nbformat": 4,
